OGNL-37 - use valueOf() instead of new for boxing. Adjust unnecessary conditional checking.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/ognl/trunk@1197020 13f79535-47bb-0310-9956-ffa450edef68